# CatDanceSystem

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Readme.md  pyproject.toml  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py
backend/app/api/: dancers.py
backend/app/api/v1/: routers.py
backend/app/api/v1/endpoints/: dancer.py  users.py
backend/app/core/: config.py  secure.py
backend/app/db/models/: __init__.py  user.py
backend/app/db/repositories/: dancer_repository.py  user_repository.py
backend/app/schemas/: dancer.py  user.py
backend/app/services/: dance_service.py  user_service.py
backend/app/tests/: conftest.py  test_user_repository.py  test_user_service.py  test_users.py
